fixed overflow

--- a/css/SettingsDrawer.css
+++ b/css/SettingsDrawer.css
@@ -9,7 +9,8 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;   
+    height: 100%;
+    overflow: hidden;
 }
 
 .setting-container {
@@ -18,7 +19,7 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 .header {
